penambahan endpoint detail order
